--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
+body {
+    background-color: rgb(243, 195, 36);
+}
+
+.gameArea {
+    display: grid;
+    place-content: center;
+    gap: 10px;
+}
 
 table {
     table-layout: fixed;
@@ -6,6 +15,10 @@ table {
     border: 1px solid black;
     height: 40px;
     width: 40px;
+    font-family: monospace;
+    font-weight: 800;
+    font-size: 12pt;
+    text-align: center;
 }
 .blackCell {
     background-color: black;
@@ -19,4 +32,17 @@ td img {
     width: 35px;
     position: relative;
     left: 4px;
+}
+
+h1 {
+    font-family: monospace;
+    text-align: center;
+}
+
+button {
+    color: white;
+    background-color: black;
+    width: 140px;
+    place-self: center;
+    font-family: monospace;
 }
